wip: add envelope controls

--- a/src/index.html
+++ b/src/index.html
@@ -2,42 +2,44 @@
 
 <!--suppress HtmlUnknownTarget -->
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
 
-        <title></title>
-        <meta name="description" content="">
-        <meta name="author" content="36ve">
+<head>
+    <meta charset="utf-8">
 
-        <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-        <script src="index.js"></script>
-    </head>
+    <title></title>
+    <meta name="description" content="">
+    <meta name="author" content="36ve">
 
-    <body>
-        <div class="content">
-            <child-element></child-element>
-        </div>
-    </body>
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <script src="index.js"></script>
+</head>
 
-    <style>
-        :root {
-            --primary-color: #68718a;
-            --darker-color: #110517;
-            --control-background-color: rgb(29, 36, 41);
-            --control-handle-color: #1a171a;
-            --control-cursor-color: #f0efe4;
-        }
+<body>
+    <div class="content">
+        <child-element></child-element>
+    </div>
+</body>
 
-        html {
-            font-family: 'Roboto', sans-serif;
-        }
+<style>
+    :root {
+        --primary-color: #68718a;
+        --darker-color: #110517;
+        --control-background-color: rgb(192, 198, 202);
+        --control-handle-color: #00954a;
+        --control-cursor-color: #f0efe4;
+    }
 
-        body {
-            background-color: var( --darker-color, black);
-        }
+    html {
+        font-family: 'Roboto', sans-serif;
+    }
 
-        .content {
-            width: 100%;
-        }
-    </style>
+    body {
+        background-color: var(--darker-color, black);
+    }
+
+    .content {
+        width: 100%;
+    }
+</style>
+
 </html>
