--- a/src/index.html
+++ b/src/index.html
@@ -22,11 +22,21 @@
 
 <style>
     :root {
-        --primary-color: #68718a;
+        --light-color: #68718a;
+        --lighter-color: #c9d2eb;
         --darker-color: #110517;
-        --control-background-color: rgb(192, 198, 202);
+
+        --control-background-color: #110517;
+        --control-top-color: #110517;
         --control-handle-color: #00954a;
-        --control-cursor-color: #f0efe4;
+        --control-cursor-color: #110517;
+
+        --key-sharp-color: var(--light-color);
+        --key-whole-color: var(--lighter-color);
+
+        --overlay-color: var(--light-color);
+
+        --ui-transition-time: .4s;
     }
 
     html {
