--- a/src/index.html
+++ b/src/index.html
@@ -29,8 +29,8 @@
       --darker-color: #110517;
 
       --control-background-color: #110517;
-      --control-top-color: #110517;
-      --control-handle-color: #00954a;
+      --control-top-color: #1f262e;
+      --control-handle-color: #accbe1;
       --control-cursor-color: #110517;
 
       --key-sharp-color: var(--light-color);
@@ -39,6 +39,13 @@
       --overlay-color: var(--light-color);
 
       --ui-transition-time: 0.4s;
+
+      --oscillator-panel-color: #7a1621;
+      --filter-panel-color: #334452;
+      --lfo-panel-color: #b13f1a;
+
+      --lcd-led-on-color: #b4d455;
+      --lcd-screen-background: darkslategray;
     }
 
     html {
