:sparkles: bind oscillators duty cycle to UI

--- a/src/index.html
+++ b/src/index.html
@@ -94,10 +94,10 @@
       --control-top-color: #1f262e;
       --control-label-color: var(--control-handle-color);
 
-      --button-disposed-background-color: white;
-      --button-disposed-label-color: black;
-      --button-active-background-color: red;
-      --button-active-label-color: white;
+      --button-disposed-background-color: #e8eaec;
+      --button-disposed-label-color: #1f262e;
+      --button-active-background-color: #090816;
+      --button-active-label-color: #b4d455;
       --button-border: 1px solid var(--light-color);
 
       --key-sharp-color: var(--control-top-color);
